tests/ui/match/match-tag-nullary.stderr
error[E0308]: mismatched types
  --> $DIR/match-tag-nullary.rs:4:40
   |
LL | enum B { B }
   |          - unit variant defined here
LL |
LL | fn main() { let x: A = A::A; match x { B::B => { } } }
   |                                    -   ^^^^ expected `A`, found `B`
   |                                    |
   |                                    this expression has type `A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
